# genetic-programming

./: .gitignore  CMakeLists.txt  Fact[int]_.xml  README.md  ReferenceTest.xml  ReferenceTestSub.xml  main.cpp  problem_add.xml  tree.xml  tree_.xml
example1/: CMakeLists.txt  Fact[int].xml  example1.cpp  multi_thread_example.cpp  problem_abs.xml  problem_add.xml  problem_fact.xml  problem_quadratic.xml  problem_settings.hpp  problem_sum.xml  problem_switch.xml  tree_executor.cpp
example1/outputs/problem_abs/: abs_0th_tree.xml  abs_1th_tree.xml  abs_2th_tree.xml  abs_3th_tree.xml  abs_4th_tree.xml  evolution.csv
example1/outputs/problem_add/: add_0th_tree.xml  add_1th_tree.xml  add_2th_tree.xml  add_3th_tree.xml  add_4th_tree.xml  evolution.csv
example1/outputs/problem_quadratic/: evolution.csv  regression_quad_0th_tree.xml  regression_quad_1th_tree.xml  regression_quad_2th_tree.xml  regression_quad_3th_tree.xml  regression_quad_4th_tree.xml
example1/outputs/problem_sum/: evolution.csv  sum_0th_tree.xml  sum_1th_tree.xml  sum_2th_tree.xml  sum_3th_tree.xml  sum_4th_tree.xml
example1/outputs/problem_switch/: evolution.csv  switch_0th_tree.xml  switch_1th_tree.xml  switch_2th_tree.xml  switch_3th_tree.xml  switch_4th_tree.xml
include/: gp_config.hpp
include/gp/: gp_config.hpp  gp_manager.hpp
include/gp/genetic_operations/: crossover.hpp  default_modules.hpp  mutation.hpp
include/gp/io/: tree_io.hpp
include/gp/node/: argument_node.hpp  array_nodes.hpp  basic_operation_node.hpp  const_node.hpp  local_variable_node.hpp  node.hpp  node_base.hpp  node_interface.hpp  progn_node.hpp  string_to_node.hpp  subroutine_node.hpp  typed_node_interface.hpp
include/gp/problem/: problem.hpp
include/gp/probrem/: probrem.hpp
include/gp/traits/: node_traits.hpp  random_node_generator_traits.hpp  string_to_node_traits.hpp  tree_traits.hpp
include/gp/tree/: io.hpp  random_node_generator.hpp  tree.hpp
include/gp/tree_operations/: node_traits.hpp  string_to_node.hpp  string_to_node_traits.hpp  tree_operations.hpp  tree_traits.hpp
include/gp/tree_operations/detail/: defines.hpp  detail.hpp  generate_tree_random.hpp  read_tree.hpp  write_tree.hpp
include/gp/utility/: default_initializer.hpp  evaluation_context.hpp  is_detected.hpp  is_match_template.hpp  left_hand_value.hpp  reference.hpp  result.hpp  type.hpp  variable.hpp
include/io/: tree_io.hpp
include/node/: argument_node.hpp  basic_operation_node.hpp  const_node.hpp  local_variable_node.hpp  node.hpp  node_base.hpp  node_interface.hpp  progn_node.hpp  subroutine_node.hpp  typed_node_interface.hpp
include/tree/: tree.hpp  tree_interface.hpp  tree_operations.hpp
include/tree/node/: node_base.hpp  typed_node_interface.hpp
include/tree_operations/: node_traits.hpp  string_to_node.hpp  string_to_node_traits.hpp  tree_operations.hpp  tree_traits.hpp
include/utility/: default_initializer.hpp  evaluation_context.hpp  left_hand_value.hpp  reference.hpp  string.hpp  type.hpp  type_name.hpp  variable.hpp
src/: example1.cpp  main.cpp
src/tree/: tree_operations.cpp
test/: CMakeLists.txt  manual_construction_and_write.cpp
test/genetic_operations/: CMakeLists.txt  crossover.cpp
test/node/: CMakeLists.txt  array.cpp  string_to_node.cpp
test/problem/: CMakeLists.txt  problem.cpp
test/tree/: CMakeLists.txt  io.cpp  tree.cpp
test/tree_operations/: CMakeLists.txt  tree_operations.cpp
test/utility/: CMakeLists.txt  evaluation_context.cpp  left_hand_value.cpp  reference.cpp  result.cpp  variable.cpp
tree/node/: node_base.hpp  node_interface.hpp  typed_node_interface.hpp
